# azure-remote-monitoring-raspberry-pi-c

./: readme.md
Basic/: .gitmodules  CMakeLists.txt
Basic/samples/: CMakeLists.txt  build.sh
Basic/samples/remote_monitoring/: CMakeLists.txt  remote_monitoring.c
Basic/samples/simplesample_amqp/: CMakeLists.txt
Basic/shells/: firmwareupdate.sh
Firmware2.0/samples/platform_specific/: CMakeLists.txt
Firmware2.0/samples/remote_monitoring/: CMakeLists.txt  remote_monitoring.c
advanced/1.0/remote_monitoring/: remote_monitoring.c
basic/remote_monitoring/: remote_monitoring.c
basic1/remote_monitoring/: remote_monitoring.c
shells/: firmwarereboot.sh
simulator/remote_monitoring/: remote_monitoring.c
